#
# picotm - A system-level transaction manager
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: LGPL-3.0-or-later
#

if ENABLE_MODULE_LIBC
nobase_include_HEADERS = picotm/config/picotm-libc-config.h \
                         picotm/errno.h \
                         picotm/fcntl-tm.h \
                         picotm/fcntl.h \
                         picotm/locale-tm.h \
                         picotm/locale.h \
                         picotm/sched.h \
                         picotm/stdbool.h \
                         picotm/stddef.h \
                         picotm/stdint.h \
                         picotm/stdio-tm.h \
                         picotm/stdio.h \
                         picotm/stdlib-tm.h \
                         picotm/stdlib.h \
                         picotm/string-tm.h \
                         picotm/string.h \
                         picotm/sys/socket-tm.h \
                         picotm/sys/socket.h \
                         picotm/sys/stat-tm.h \
                         picotm/sys/stat.h \
                         picotm/sys/types.h \
                         picotm/time.h \
                         picotm/picotm-libc.h \
                         picotm/unistd-tm.h \
                         picotm/unistd.h
endif
