#
# picotm - A system-level transaction manager
# Copyright (c) 2017-2018   Thomas Zimmermann
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: LGPL-3.0-or-later
#

if ENABLE_MODULE_TXLIB
nobase_include_HEADERS = picotm/config/picotm-txlib-config.h \
                         picotm/picotm-txlib.h \
                         picotm/picotm-txlist.h \
                         picotm/picotm-txlist-state.h \
                         picotm/picotm-txmultiset.h \
                         picotm/picotm-txmultiset-state.h \
                         picotm/picotm-txqueue.h \
                         picotm/picotm-txqueue-state.h \
                         picotm/picotm-txstack.h \
                         picotm/picotm-txstack-state.h
endif
